fix: When content overflow, Instead hide terminal content, show scroll

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ body {
 }
 
 .terminal {
+  overflow: auto;
   max-width: 548px;
   height: 703px;
   width: 100%;
